--- a/client/src/components/utils/ChipComp/ChipComp.css
+++ b/client/src/components/utils/ChipComp/ChipComp.css
@@ -1,12 +1,14 @@
 .chipComp {
     padding: 2px 8px;
     border-radius: 10px;
-    margin-left: 8px;
     border: 1px solid transparent;
     display: flex;
     align-items: center;
+}
+
+.chipComp.positionAbsolute {
     position: absolute;
-    left: 0;
+    left: 8px;
     bottom: -12px;
     z-index: 2;
 }
